[package]
name = "xdp-drop"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
log4rs = "1.0"
tokio = { version = "1.25", features = [
    "full",
    "macros",
    "rt-multi-thread",
    "net",
    "signal",
    "io-util",
    "io-std"
] }
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
xdp-drop-common = { path = "../xdp-drop-common", features = ["user"] }
anyhow = "1"
clap = { version = "4.1", features = ["derive"] }
log = "0.4"
bytes = "1"
env_logger = "0.11"
pnet = "0.28"

[[bin]]
name = "xdp-drop"
path = "src/main.rs"
